--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
       "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
-      "browser",
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
