--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
+    "devices": "C:\\Users\\rasgeath\\AppData\\Local\\android\\Sdk\\platform-tools\\adb devices",
+    "android": "ionic cordova run android --device -l",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
@@ -17,7 +19,7 @@
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
+    "@angular/core": "^5.2.10",
     "@angular/forms": "5.2.10",
     "@angular/http": "^5.2.10",
     "@angular/platform-browser": "5.2.10",
@@ -27,7 +29,7 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
