--- a/package.json
+++ b/package.json
@@ -10,43 +10,45 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "devices": "C:\\Users\\rasgeath\\AppData\\Local\\android\\Sdk\\platform-tools\\adb devices",
-    "android": "ionic cordova run android --device -l",
+    "android": "ionic cordova run android --device",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
+    "@angular/animations": "5.2.11",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "^5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "4.7.0",
-    "@ionic-native/native-audio": "^4.7.0",
+    "@ionic-native/media": "4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "^7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-nativeaudio": "^3.0.9",
+    "cordova-plugin-media": "^5.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
-    "ionic-audio": "^3.2.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.9",
-    "typescript": "~2.6.2"
+    "@ionic/app-scripts": "^3.1.9",
+    "typescript": "~2.6.2",
+    "webpack": "^4.12.0",
+    "ws": "3.3.2"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -56,7 +58,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-nativeaudio": {}
+      "cordova-plugin-media": {}
     },
     "platforms": [
       "android",
