--- a/package.json
+++ b/package.json
@@ -26,18 +26,25 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/media": "4.7.0",
+    "@ionic-native/music-controls": "^4.8.0",
+    "@ionic-native/screen-orientation": "^4.8.0",
     "@ionic-native/splash-screen": "4.7.0",
-    "@ionic-native/status-bar": "4.7.0",
+    "@ionic-native/status-bar": "^4.7.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file": "4.3.3",
+    "cordova-plugin-file-transfer": "1.6.3",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-media": "^5.0.2",
+    "cordova-plugin-media": "3.0.1",
+    "cordova-plugin-music-controls": "^2.1.4",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -58,7 +65,10 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-media": {}
+      "cordova-plugin-media": {},
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-music-controls": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android",
