--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "^4.7.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.1.0",
+    "cordova-android": "6.4.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "4.3.3",
-    "cordova-plugin-file-transfer": "1.6.3",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-media": "3.0.1",
@@ -68,7 +68,9 @@
       "cordova-plugin-media": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-music-controls": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android",
